<resources>
    <string name="app_name">Husky Cooking</string>
    <string name="facebook_app_id">264122437310806</string>

    <string name="curated_menus">Curated Menus</string>
    <string name="add_a_recipe">Add Recipe</string>
    <string name="home_screen_label">HOME\n</string>
    <string name="action_settings">Settings</string>
    <string name="recipe_name_hint">Enter a Recipe Name</string>
    <string name="recipe_descript_hint">Enter Directions</string>
    <string name="ingredient_hint">Enter an Ingredient</string>
    <string name="measurement_hint">How much?</string>

    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="servings_hint">How many servings?</string>
    <string name="cook_time_hint">How long will this take?(in minutes)</string>

    <string name="add_recipe_label">Add A Recipe</string>
    <string name="add_recipe_but_text">Add Recipe</string>
    <string name="add_ingredients_button_text">ADD INGREDIENTS</string>
    <string name="add_to_cook_text">Add to Cookbook</string>
    <string name="share_recipe_button">Share</string>
    <string name="cookbook_button_label">Cookbook</string>
    <string name="shopping_list_button_label">Shopping List</string>
    <string name="all_recipes_button_label">View All Recipes</string>
    <string name="all_recipes">All Recipes</string>
    <string name="create_recipe_button_label">Create a new Recipe</string>
    <string name="view_menus_buttons_label">View Curated Menus</string>
    <string name="your_stuff">Your Stuff</string>
    <string name="all_stuff">Other Stuff</string>

    <string name="cook_book_upper_label">Your Cookbook</string>


    <string name="action_logout">LOG OUT</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="LOGIN_PREFS">team14.tacoma.uw.edu.husky_cooking.PREFS</string>
    <string name="LOGIN_FILE">team14.tacoma.uw.edu.husky_cooking.LOGIN_FILE</string>
    <string name="LOGIN_URL">http://cssgate.insttech.washington.edu/~_450atm14/husky_cooking/login.php?</string>
    <string name="LOGGED_USER">user</string>
    <string name="LOGIN_METHOD">method</string>
    <string name="CURRENT_MENU">menu</string>
    <string name="HUSKY">husky</string>
    <string name="FACE">facebook</string>

    <string name="CURRENT_RECIPE_ID">id</string>
    <string name="CURRENT_RECIPE">recipe</string>
    <string name="CURRENT_SERVINGS">servings</string>
    <string name="CURRENT_COOK_TIME">cook_time</string>
    <string name="CURRENT_DESCRIPTION">directions</string>

    <string name="CURRENT_INGREDIENT">ingredient</string>
    <string name="CURRENT_AMOUNT">amount</string>
    <string name="CURRENT_MEASURE_TYPE">measure type</string>
    <string name="register_button_label">REGISTER</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="login_in_button">LOG IN</string>
    <string name="register_text_label">\nREGISTER</string>


    <string name="shopping_list_title">Shopping List</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="remove_from_shopping">Remove From Shopping List</string>
    <string name="add_to_shopping_list">Add To Shopping List</string>
    <string name="ingredient_detail">Ingredient Details</string>
    <string name="view_ingredients">View Ingredients</string>

    <string name="with_facebook">With Facebook:</string>
    <string name="without_facebook">With Husky Cooking:</string>

    <string name="ingredient_name">Name: </string>
    <string name="ingredient_name_hint">Enter a name</string>
    <string name="ingredient_amount">Amount: </string>
    <string name="ingredient_amt_hint">How much?</string>
    <string name="ingredient_measure_type">Measurement Type: </string>
    <string name="ingredient_measure_hint">Of what type? [optional] (ex: cup, ounce)</string>
    <string name="add_ingredient">ADD AN INGREDIENT</string>
    <string name="add_more_ingredients_button_label">ADD MORE</string>
    <string name="finish">FINISH</string>


</resources>

