<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".recipe.RecipeActivity">



    <item
        android:id="@+id/action_home"
        android:title="@string/home_screen_label"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_shopping_list"
        android:title="@string/shopping_list_button_label"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_cookbook"
        android:title="@string/cookbook_button_label"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_all_recipes"
        android:title="@string/all_recipes"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_create_recipe"
        android:title="@string/add_a_recipe"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_curated"
        android:title="@string/curated_menus"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>



</menu>
