<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".recipe.AddIngredientFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/add_ingredient"
        android:layout_marginBottom="30dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_name_hint"
        android:id="@+id/ingredient_name_from_add"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_amt_hint"
        android:id="@+id/ingredient_amount_from_add"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_measure_hint"
        android:id="@+id/ingredient_measure_type_from_add"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ingredient_add_more_button"
            android:text="@string/add_more_ingredients_button_label"
            android:layout_gravity="end"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ingredient_finish_button"
            android:text="@string/finish"
            android:layout_gravity="end"/>

    </LinearLayout>



</LinearLayout>
