<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="team14.tacoma.uw.edu.husky_cooking.AddRecipeFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Add a Recipe"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_name_hint"
        android:id="@+id/recipe_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_descript_hint"
        android:id="@+id/recipe_edit_descript"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Cooking Time:" />

    <Spinner
        android:id="@+id/cook_time_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />
    <!--android:entries="@array/five_to_120"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Servings:" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/servings_spinner"

        />
    <!--android:entries="@array/one_to_ten"-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_recipe_button"
        android:text="@string/add_recipe_but_text"
        android:layout_gravity="right"/>
</LinearLayout>

